--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+@import url('http://fonts.cdnfonts.com/css/montserrat');
+
+* {
+	font-family: 'Montserrat', sans-serif;
+}
 .App {
-  text-align: center;
+	display: inline-flex;
+	flex-flow: column;
+	width: 90%;
+	max-width: 800px;
+	text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	background: #323050;
+	color: white;
+	text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  	text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+textarea {
+	font-size: 16px;
+	padding: 15px;
+	color: #f2f2f2;
+	background: #7A7265;
+	border: none;
+	height: 150px;
+	width: 100%;
+	box-sizing: border-box;
+	outline-color: #f2f2f2;
 }
 
-.App-link {
-  color: #61dafb;
+::placeholder {
+	color: #1f1f1f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+	position: absolute;
+	bottom: 0;
+	padding-bottom: 15px;
+	padding-left: 250px;
+	font-size: 15pt;
+}
+@media screen and (max-width: 770px)
+{
+	footer {
+		padding-left: 200px;
+		font-size: 15pt;
+	}
+}
+@media screen and (max-width: 430px)
+{
+	footer {
+		padding-left: 75px;
+		font-size: 12pt;
+	}
+}
+@media screen and (max-width: 380px)
+{
+	footer {
+		padding-left: 50px;
+		font-size: 12pt;
+	}
+}
+@media screen and (max-width: 325px)
+{
+	footer {
+		padding-left: 25px;
+		font-size: 12pt;
+	}
 }
